--- a/index.html
+++ b/index.html
@@ -127,7 +127,6 @@
 <body>
     <div class="header">
         <div class="header-content">
-	    <img src="images/spoga.png" alt="spoga">
             <img src="images/LOGO PNG.png" alt="GLOBAL BASE SOURCING LIMITED">
             
             <!-- Add more images as needed -->
@@ -154,8 +153,8 @@
                     <td>Width 17cm x Length 17cm x Height 15cm</td>
                 </tr>
                 <tr>
-                    <th>Product CBM</th>
-                    <td>0.00</td>
+                    <th>MOQ</th>
+                    <td>63984</td>
                 </tr>
                 <tr>
                     <th>Product Weight</th>
@@ -178,28 +177,28 @@
                     <td>0.051</td>
                 </tr>
                 <tr>
-                    <th>20 Ft Container Carton Quantity</th>
-                    <td>24471 Carton</td>
+                    <th>20 Ft Container Quantity</th>
+                    <td>26352</td>
                 </tr>
                 <tr>
-                    <th>40 Ft Container Carton Quantity</th>
-                    <td>52706 Carton</td>
+                    <th>40 Ft Container Quantity</th>
+                    <td>56448</td>
                 </tr>
                 <tr>
-                    <th>40 HQ Container Carton Quantity</th>
-                    <td>62118 Carton</td>
+                    <th>40 HQ Container Quantity</th>
+                    <td>63984</td>
                 </tr>
                 <tr>
                     <th>Price</th>
-                    <td><button class="link-button" id="myBtn">Show Price</button></td>
+                    <td>USD 0.65</td>
                 </tr>
                 <tr>
                     <th>FOB Port</th>
                     <td>Qingdao, China</td>
                 </tr>
                 <tr>
-                    <th>More Details - Packaging PPT</th>
-                    <td><button class="link-button" onclick="window.location.href='Link';"> </button></td>
+                    <th>More Details </th>
+                    <td>Bulk Packed, Base Label</td>
                 </tr>
             </table>
         </div>
